[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/White_square.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Casino3DMarqueeRegular-d9A2V.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/UI/Pause.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/ThaleahFat.ttf" type="DynamicFontData" id=4]

[sub_resource type="Theme" id=5]
default_font = ExtResource( 2 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 0, 0, 0, 1 )
Label/constants/line_spacing = 0
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 0
Label/fonts/font = ExtResource( 2 )
Label/styles/normal = null

[sub_resource type="DynamicFont" id=2]
size = 48
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.34902, 0.34902, 0.34902, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.878431, 0.278431, 0.278431, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.670588, 0.207843, 0.207843, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.878431, 0.278431, 0.278431, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.878431, 0.278431, 0.278431, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="Theme" id=4]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 1 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 0
Button/fonts/font = SubResource( 2 )
Button/styles/disabled = SubResource( 6 )
Button/styles/focus = SubResource( 7 )
Button/styles/hover = SubResource( 8 )
Button/styles/normal = SubResource( 9 )
Button/styles/pressed = SubResource( 10 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.105882, 0.121569, 0.196078, 0.294118 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.329102
anchor_top = 0.210938
anchor_right = 0.71875
anchor_bottom = 0.76875
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Paused" type="Label" parent="VBoxContainer"]
margin_right = 399.0
margin_bottom = 120.0
theme = SubResource( 5 )
text = "Paused"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 135.0
margin_right = 399.0
margin_bottom = 357.0
custom_constants/separation = 15
alignment = 1

[node name="SaveGame" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 399.0
margin_bottom = 64.0
focus_mode = 0
theme = SubResource( 4 )
text = "Save Game"

[node name="Settings" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 399.0
margin_bottom = 143.0
focus_mode = 0
theme = SubResource( 4 )
text = "Setting"

[node name="QuitToMenu" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 399.0
margin_bottom = 222.0
focus_mode = 0
theme = SubResource( 4 )
text = "Quit to menu"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/SaveGame" to="." method="_on_SaveGame_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/QuitToMenu" to="." method="_on_QuitToMenu_pressed"]
